include_HEADERS = oolib
otherincludedir = $(includedir)/oo
otherinclude_HEADERS = oo/Argv.h oo/Array.h oo/Base.h oo/Chan.h oo/compare.h \
	oo/daemon.h oo/defer.h oo/Dict.h oo/dir.h oo/Error.h oo/File.h oo/Functor.h \
	oo/go.h oo/List.h oo/Mutex.h oo/Observer.h oo/print.h oo/Ref.h oo/Regex.h \
	oo/Sem.h oo/Sequence.h oo/Set.h oo/signal.h oo/Sizeable.h oo/Sock.h \
	oo/String.h oo/types.h
