bin_PROGRAMS = testError testString testArray testList testDict testPrint \
	testGo testMutex testChan testCond testSem testRef testDir testArgv \
	testSock testDaemon testObserver testSet testDefer testFunctor \
	testRegex

# testError
testError_SOURCES = testError.cpp
testError_LDADD = -loo
testError_CXXFLAGS = -std=c++11 -fPIC -L../src

# testString
testString_SOURCES = testString.cpp
testString_LDADD = -loo
testString_CXXFLAGS = -std=c++11 -fPIC -L../src

# testArray
testArray_SOURCES = testArray.cpp
testArray_LDADD = -loo
testArray_CXXFLAGS = -std=c++11 -fPIC -L../src

# testList
testList_SOURCES = testList.cpp
testList_LDADD = -loo
testList_CXXFLAGS = -std=c++11 -fPIC -L../src

# testDict
testDict_SOURCES = testDict.cpp
testDict_LDADD = -loo
testDict_CXXFLAGS = -std=c++11 -fPIC -L../src

# testPrint
testPrint_SOURCES = testPrint.cpp
testPrint_LDADD = -loo
testPrint_CXXFLAGS = -std=c++11 -fPIC -L../src

# testGo
testGo_SOURCES = testGo.cpp
testGo_LDADD = -loo
testGo_CXXFLAGS = -std=c++11 -fPIC -L../src

# testMutex
testMutex_SOURCES = testMutex.cpp
testMutex_LDADD = -loo
testMutex_CXXFLAGS = -std=c++11 -fPIC -L../src

# testChan
testChan_SOURCES = testChan.cpp
testChan_LDADD = -loo
testChan_CXXFLAGS = -std=c++11 -fPIC -L../src

# testArgv
testArgv_SOURCES = testArgv.cpp
testArgv_LDADD = -loo
testArgv_CXXFLAGS = -std=c++11 -fPIC -L../src

# testCond
testCond_SOURCES = testCond.cpp
testCond_LDADD = -loo
testCond_CXXFLAGS = -std=c++11 -fPIC -L../src

# testSem
testSem_SOURCES = testSem.cpp
testSem_LDADD = -loo
testSem_CXXFLAGS = -std=c++11 -fPIC -L../src

# testRef
testRef_SOURCES = testRef.cpp
testRef_LDADD = -loo
testRef_CXXFLAGS = -std=c++11 -fPIC -L../src

# testDir
testDir_SOURCES = testDir.cpp
testDir_LDADD = -loo
testDir_CXXFLAGS = -std=c++11 -fPIC -L../src

# testSock
testSock_SOURCES = testSock.cpp
testSock_LDADD = -loo
testSock_CXXFLAGS = -std=c++11 -fPIC -L../src

# testDaemon
testDaemon_SOURCES = testDaemon.cpp
testDaemon_LDADD = -loo
testDaemon_CXXFLAGS = -std=c++11 -fPIC -L../src

# testObserver
testObserver_SOURCES = testObserver.cpp
testObserver_LDADD = -loo
testObserver_CXXFLAGS = -std=c++11 -fPIC -L../src

# testSet
testSet_SOURCES = testSet.cpp
testSet_LDADD = -loo
testSet_CXXFLAGS = -std=c++11 -fPIC -L../src

# testDefer
testDefer_SOURCES = testDefer.cpp
testDefer_LDADD = -loo
testDefer_CXXFLAGS = -std=c++11 -fPIC -L../src

# testFunctor
testFunctor_SOURCES = testFunctor.cpp
testFunctor_LDADD = -loo
testFunctor_CXXFLAGS = -std=c++11 -fPIC -L../src

# testRegex
testRegex_SOURCES = testRegex.cpp
testRegex_LDADD = -loo
testRegex_CXXFLAGS = -std=c++11 -fPIC -L../src
